# gw2-utility

./: GW2_chunk_packed_spec.md  GW2_dat_file_spec.md  ParsingGw2Struct.idc  README.md  STRS_TEXT_RESEARCH_NOTES.md  Template1.bt  bgfx.bt  convert_schema.py  dump_gw2_structs.py  filenamedataformula.md  gen_gw2_json.py  geom.bt  geom.py  gw2_crc.txt  gw2_pf.bt  gw2_pf_32bit_pointer.bt  gw2_pf_64bit_pointer.bt  gw2_struct.txt  gw2dat.bt  huffman code gw2.txt  input.txt  input_header.txt  input_source.txt  modl.bt  output.txt  output_gw2.txt  parseANStructs.idc  parseANStructsHeader.idc  parseANStructsOG.idc  parsegw2struct.cpp  rc4_bench.py  rc4_bruteforce.py  rc4_bruteforce2.py  strs_rc4_decrypt.py
decompression_gw2/: README.md  STRS_TEXT_RESEARCH_NOTES.md  cmp_decompress_method0.h  cmp_decompress_method0.py  strs_decode.py  test_c17.c
decompression_gw2/image/: README.md  block_decoders.py  decode_atex.py  gw2_atex.h  gw2_atex.py  test_c.c  test_cpp.cpp
gw2app/: .mcp.json  GW2CURATED.txt  GW2_Vertex_FVF_Notes.md  RESEARCH_FILETYPES.md  catatan.txt  decrypted.csv  gw2_capture_textkeys.py  gw2_decrypt_strs.py  gw2_pf_64bit_pointer.bt  lang0_files.txt  output.txt  parseANStructs.idc  strs_textbase.csv  test_cpp20.cpp  textkeys.csv
gw2app/gw2browser/: CMakeLists.txt  build_err.txt  chick.txt  dbg1925381.txt  exp_deimos.txt  exp_jade.txt  exp_pale.txt
gw2app/gw2browser/include/: audio_player.h  d3d_renderer.h  dds.h  entry_extractor.h  hexview.h  index_db.h  info_panel.h  mft_listview.h  model_renderer.h  splitter.h  strs_keys.h  strs_view.h  struct_template.h  wic_image.h
gw2app/gw2browser/src/: audio_player.cpp  d3d_renderer.cpp  dds.cpp  entry_extractor.cpp  hexview.cpp  index_db.cpp  info_panel.cpp  main.cpp  mft_listview.cpp  model_renderer.cpp  splitter.cpp  stb_vorbis_impl.c  strs_keys.cpp  strs_view.cpp  struct_template.cpp  wic_image.cpp
gw2app/gw2index/: README.md  build.sh  build_release.bat  gw2index.cpp
gw2app/gw2index/mcp/: server.py
gw2app/gw2mcp/: README.md  SHADER_PIPELINE.md
gw2app/gw2mcp/native/: CMakeLists.txt  granny_anim.hpp  gw2_audio.hpp  gw2model.hpp  main.cpp
gw2app/gw2mcp/native/include/: ParsedNode.h  cmp_decompress_method0.hpp  gw2_atex.hpp  gw2dat.h
gw2app/gw2mcp/native/src/: BinaryParser.cpp
gw2app/gw2mcp/server/: server.py  strs.py
gw2app/gw2mcp/tools/: extract_exe_shaders.py  parse_bgfx_shaders.py  test_shader.cpp
gw2app/gw2mcp/tools/exe_shaders/: README.md  manifest.json  stage_candidates.json
gw2app/gw2mcp/tools/exe_shaders/cso/: 0000_F_00000000.cso  0001_F_00000000.cso  0002_F_00000000.cso  0003_F_00000000.cso  0004_F_00000000.cso  0010_F_00000000.cso  0011_F_00000000.cso  0012_F_00000000.cso  0020_F_00000000.cso  0021_F_00000000.cso  0023_F_00000000.cso  0026_F_00000000.cso  0029_F_00000000.cso  0030_F_00000000.cso  0031_F_00000000.cso  0032_F_00000000.cso  0037_V_00000000.cso  0038_V_00000000.cso  0060_F_00000000.cso  0061_F_00000000.cso  0062_F_00000000.cso  0063_F_00000000.cso  0067_F_00000000.cso  0070_F_00000000.cso  0071_F_00000000.cso  0072_F_00000000.cso  0080_F_00000000.cso  0081_F_00000000.cso  0082_F_00000000.cso  0083_F_00000000.cso  0086_F_00000000.cso  0090_F_00000000.cso  0091_F_00000000.cso  0092_F_00000000.cso  0100_F_00000000.cso  0101_F_00000000.cso  0102_F_00000000.cso  0103_F_00000000.cso  0107_F_00000000.cso  0110_F_00000000.cso  (+1078 more)
gw2app/gw2mcp/viewer/: README.md  build.ps1  build_gs.ps1  gw2gsviewer.cpp  gw2viewer.cpp
gw2app/hook/: build.sh  gw2_textkey_hook.cpp  inject.cpp
gw2app/minieditor/: CMakeLists.txt  GW2_TEMPLATE_README.md  test_gw2.cpp
gw2app/minieditor/include/: HexViewer.h  JsonEditor.h  TreeView.h
gw2app/minieditor/src/: JsonEditor.cpp  TemplateManager.cpp  main.cpp
gw2app/minieditor/templates/: texture_example.json
gw2mcp/: .mcp.json  README.md
gw2mcp/native/: build.ps1  main.cpp
gw2mcp/native/src/: BinaryParser.cpp  gw2dat.cpp
gw2mcp/server/: server.py
minieditor/: CMakeLists_additions.txt
minieditor/include/: Application.h  BinaryParser.h  TemplateManager.h  TreeView.h
minieditor/src/: Application.cpp  HexViewer.cpp  TreeView.cpp
minieditor/templates/: gw2_packfile.json  gw2_packfile.json.done
